2025-11-15T00:44:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19381621779 # 809
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-15
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 246 280 / 249 283
* notice: next accum: outdated-unq outdated-all / unq all: 248 282 / 249 283
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-31] / []

2025-11-12T00:45:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19282676657 # 806
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 245 279 / 249 283
* notice: next accum: outdated-unq outdated-all / unq all: 246 280 / 249 283
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-28] / []

2025-11-11T00:45:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19251026554 # 805
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-11
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 244 278 / 249 283
* notice: next accum: outdated-unq outdated-all / unq all: 245 279 / 249 283
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-27] / []

2025-11-08T00:41:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19185173678 # 802