@@ -1,3 +1,12 @@
+2025-11-17T00:46:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19414863258 # 811
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-17
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 248 282 / 249 283
+* notice: next accum: outdated-unq outdated-all / unq all: 248 282 / 250 284
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-11-16]
+
 2025-11-15T00:44:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19381621779 # 809
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-15
